jaws.js runs on local machine

--- a/engine.html
+++ b/engine.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
-    <script src="http://www.jawsjs.com/jawsjs/jaws-dynamic.js"></script>
+    <script src="jawsjs/jaws.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css" />
     <title>Puzzle Game</title>
   </head>
